Allow the pipeline page to kick off pipelines